# pyshiny-e2e-playwright

./: README.md  app.py  pyproject.toml  requirements.txt  style.css
e2e_testing_pyshiny/: operation.py  server.py  ui.py
pyshiny_e2e_playwright/: calculation_type.py  server.py  ui.py
tests/: test_calculation.py  test_operation.py  test_slider.py  test_static_text.py
tests/end2end/: test_calculation.py  test_slider.py
